# tensorDCT

./: .gitignore  Makefile  README.md  comparing_dct.cpp
cufft_test/: .Makefile.swp  .main.cu.swp  Makefile  README.md  cufft.cu  main.cpp  main.cu  prog
gpu_comparision/: Makefile  README.md  cublas_vs_cufft.cpp
include/: DctProcessor.cpp  DctProcessor.h  common_gpu_utils.h  cuda_stuff.h
include/dct/cublas/: DctCuBlas.cpp  DctCuBlas.cu  DctCuBlas.h
include/dct/cufft/: DctCuFFT.cpp  DctCuFFT.h
include/dct/tensorcores/: DctTC.cpp  DctTC.h
test_libs/: .fftw_1d.cu.swo  .fftw_1d.cu.swp  CMakeLists.txt  Makefile  README.md  fftw_1d.cu  fftw_2d.cu  matmul_cublas.cu  matmul_fft_base.cu  prog  utils.h
test_libs/include/: tools.h
utils/: matutils.h
